--- a/Resources/Messages/EmailMessages.resx
+++ b/Resources/Messages/EmailMessages.resx
@@ -118,35 +118,35 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Email_SubjectUserRegistration" xml:space="preserve">
-    <value>Verify Your Account</value>
+    <value>Verify Your GradSync Account</value>
   </data>
   <data name="Email_BodyUserRegistration" xml:space="preserve">
     <value>Hello {0},
 
-Thank you for registering with GradSync! To complete your registration and activate your account, please verify your email by clicking the link below:
+Thank you for joining GradSync! To complete your registration, please verify your email by clicking the link below:
 
 Verify Account: {1}
 
-For security reasons, this link will expire in 1 hour. If the link doesn't work, you can copy and paste it directly into your browser's address bar.
+This link will expire in 1 hour. If it doesn’t work, copy and paste the URL into your browser.
 
-If you did not sign up for a GradSync account, please disregard this email.
+If you didn’t sign up for GradSync, you can ignore this email.
 
 Best regards,
 The GradSync Team</value>
   </data>
   <data name="Email_SubjectUserPasswordReset" xml:space="preserve">
-    <value>Your Password Has Been Reset</value>
+    <value>Your GradSync Password Has Been Reset</value>
   </data>
   <data name="Email_BodyUserPasswordReset" xml:space="preserve">
     <value>Hello {0},
 
-Your password has been successfully reset. Please use the temporary password provided below to log in to your account:
+Your password has been successfully reset. Please use the temporary password below to log in:
 
 Temporary Password: {1}
 
-For your security, we recommend changing this password immediately after logging in.
+For your security, we recommend changing this password as soon as you log in.
 
-If you did not request this password reset, please contact us by replying to this email right away.
+If you didn’t request this reset, please email support@gradsync.org or admin@gradsync.org immediately.
 
 Best regards,
 The GradSync Team</value>
@@ -154,18 +154,18 @@ The GradSync Team</value>
   <data name="Email_BodyUserRequestPasswordReset" xml:space="preserve">
     <value>Hello {0},
 
-We received a request to reset the password for your GradSync account. To proceed, please use the link below:
+We received a request to reset your GradSync password. To continue, please click the link below:
 
 Reset Password: {1}
 
-This link will expire in 1 hour for your security. If the link doesn't work, you can copy and paste it directly into your browser's address bar.
+This link will expire in 1 hour. If it doesn’t work, copy and paste the URL into your browser.
 
-If you did not request this reset, please ignore this email—no action is required.
+If you didn’t request this reset, you can safely ignore this email.
 
 Thank you,
 The GradSync Team</value>
   </data>
   <data name="Email_SubjectUserRequestPasswordReset" xml:space="preserve">
-    <value>Password Reset Request</value>
+    <value>Password Reset Request for Your GradSync Account</value>
   </data>
 </root>
