--- a/Resources/Constants/ExpirationTimes.resx
+++ b/Resources/Constants/ExpirationTimes.resx
@@ -117,4 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Expiration_Messages" xml:space="preserve">
+    <value>15</value>
+  </data>
+  <data name="Expiration_Jobs" xml:space="preserve">
+    <value>15</value>
+  </data>
+  <data name="Expiration_Users" xml:space="preserve">
+    <value>15</value>
+  </data>
+  <data name="Expiration_Applications" xml:space="preserve">
+    <value>15</value>
+  </data>
 </root>
